--- a/complex static web/complex web.html
+++ b/complex static web/complex web.html
@@ -20,5 +20,43 @@
  		<a class="lg" href="#">登录</a>
  	</div>
  </div>
+ <div class="left">
+ 	<div class="personal-info">
+ 		<div class="personal-info-photo">
+ 		<a class="n" href="#"><span>ABC123</span></a>
+ 		</div>
+ 		<div class="personal-info-circle">
+ 		</div>
+ 		<div class="personal-info-num">
+ 			<ul class="line">
+ 				<li><a class="n" href="#">110</a></li>
+ 				<li class="x"><a href="#">收藏</a></li>
+ 			</ul>
+ 			<ul>
+ 				<li><a class="n" href="#">313</a></li>
+ 				<li class="x"><a href="#">粉丝</a></li>
+ 			</ul>
+ 		</div>
+ 	</div>
+ 	<div class="left-expand">
+ 		<dl>
+ 			<dt>个人报表</dt>
+ 			<dd>文件一</dd>
+ 			<dd class="ss">文件二</dd>
+ 			<dd class="sl ss">文档1</dd>
+ 			<dd class="sl">文档2</dd>
+ 			<dd>文件三</dd>
+ 		</dl>
+ 	</div>
+ 	<div class="left-not-expand">
+ 		<ul>
+ 			<li>个人收藏</li>
+ 			<li>我的分享</li>
+ 			<li>图库</li>
+ 			<li>成长记录</li>
+ 			<li>账户信息</li>
+ 		</ul>
+ 	</div>
+ </div>
 </body>
 </html>
